# aerpawlib

./: .gitignore  1.3.0-concerns.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  pytest.ini  setup.py  test_deprecation.py
.github/workflows/: ci.yml  integration.yml  pdoc-pages.yml  ruff.yml
aerpawlib/: __init__.py  __main__.py  aerpaw.py  constants.py  external.py  install_ardupilot.sh  log.py  runner.py  safetyChecker.py  sitl.py  structured_log.py  util.py  vehicle.py  zmqutil.py
aerpawlib/_internal/: __init__.py  connection_string.py
aerpawlib/cli/: __init__.py  config_merge.py  constants.py  disconnect.py  discovery.py  experiments_v1.py  experiments_v2.py  log.py  logging_setup.py  paths.py  progress_bar.py
aerpawlib/legacy/: __init__.py  aerpaw.py  runner.py  util.py  vehicle.py  zmqutil.py
aerpawlib/v1/: __init__.py  aerpaw.py  constants.py  exceptions.py  external.py  helpers.py  log.py  runner.py  runner_decorators.py  runner_impl.py  safety.py  safetyChecker.py  util.py  vehicle.py  zmqutil.py
aerpawlib/v1/runner/: __init__.py  decorators.py  impl.py
aerpawlib/v1/safety/: __init__.py  __main__.py  client.py  server.py  wire_format.py
aerpawlib/v1/util/: __init__.py  geofence.py  geometry.py  plan_io.py  ports.py
aerpawlib/v1/vehicle/: __init__.py  connection.py  connection_lifecycle.py  core_vehicle.py  drone.py  dummy_vehicle.py  rover.py  state.py  telemetry_compat.py  telemetry_subscriptions.py
aerpawlib/v1/vehicles/: __init__.py  connection.py  core_vehicle.py  drone.py  dummy_vehicle.py  rover.py  telemetry_compat.py
aerpawlib/v2/: __init__.py  aerpaw.py  constants.py  event_log.py  exceptions.py  external.py  geofence.py  log.py  logging.py  plan.py  protocols.py  runner.py  runner_config.py  runner_decorators.py  runner_impl.py  safety.py  safety_checker.py  testing.py  types.py  vehicle.py  zmqutil.py
aerpawlib/v2/runner/: __init__.py  config.py  decorators.py  impl.py
aerpawlib/v2/safety/: __init__.py  checker.py  connection.py  limits.py  monitor.py  types.py  validation.py
aerpawlib/v2/vehicle/: __init__.py  base.py  connection_helpers.py  connection_state.py  drone.py  heading.py  mock_state.py  navigation.py  offboard.py  rover.py  state.py  task.py
configs/: pdoc.json  sitl-drone.json  sitl-rover.json  structured-logging.json  v1-drone.json  v1-rover.json  v2-drone.json  v2-rover.json
docs/: ALIASES.md  CLI.md  DEVELOPMENT.md  FEATURE_PARITY.md  MIGRATION.md  README.md  ROADMAP.md  USER_GUIDE.md  log.md
docs/cli/: README.md
docs/legacy/: README.md  safety_checker.md
docs/v1/: README.md  aerpaw.md  compromises.md  constants.md  exceptions.md  external.md  helpers.md  log.md  runner.md  safety.md  safety_checker.md  util.md  vehicle.md  vehicles.md  zmqutil.md
docs/v2/: README.md  aerpaw.md  command_handle.md  constants.md  exceptions.md  external.md  geofence.md  log.md  logging.md  migration.md  plan.md  protocols.md  runner.md  safety.md  testing.md  types.md  vehicle.md  zmqutil.md
examples/: README.md
examples/legacy/: basic_runner.py  circle.py  external_runner.py  hide_rover.py  preplanned_trajectory.py  squareoff_logging.py
examples/legacy/zmq_preplanned_orbit/: consts.py  drone_orbiter.py  drone_tracer.py  ground_coordinator.py
examples/legacy/zmq_runner/: follower.py  leader.py
examples/v1/: basic_example.py  basic_runner.py  circle.py  external_runner.py  figure_eight.py  gps_logger.py  guided_mission_ping_iperf.py  hide_rover.py  preplanned_trajectory.py  radio_power.py  rover_data_to_kml.py  rover_search.py  squareoff_logging.py
examples/v1/zmq_preplanned_orbit/: README.md  drone_orbiter.py  drone_tracer.py  ground_coordinator.py
examples/v1/zmq_runner/: README.md  follower.py  leader.py
examples/v2/: at_init_example.py  basic_example.py  basic_runner.py  circle.py  command_handle_cancel_example.py  command_handle_example.py  command_validation_example.py  dummy_vehicle_example.py  enhanced_example.py  external_runner.py  figure_eight.py  geofence_example.py  hide_rover.py  logging_example.py  plan_example.py  preplanned_trajectory.py  rover_example.py  squareoff_logging.py  state_machine_example.py  velocity_example.py  zmq_state_machine_example.py
examples/v2/zmq_preplanned_orbit/: README.md  drone_orbiter.py  drone_tracer.py  ground_coordinator.py
examples/v2/zmq_runner/: README.md  follower.py  leader.py
scripts/: generate_pdoc.py  install_dev.sh  run_example.py  run_proxy.py  setup_sitl.py
tests/: README.md  __init__.py  conftest.py
tests/configs/: testv1.json  testv1_basic_runner.json  testv1_basicexample.json  testv1_circle.json  testv1_external_runner.json  testv1_figure_eight.json  testv1_hide_rover.json  testv1_preplanned_trajectory.json  testv1_squareoff_logging.json  testv1_zmq_drone_orbiter.json  testv1_zmq_drone_tracer.json  testv1_zmq_follower.json  testv1_zmq_ground_coordinator.json  testv1_zmq_leader.json  testv2.json  testv2_basicexample.json
tests/integration/: __init__.py  test_drone_sitl.py  test_missions.py  test_sitl_manager.py  test_v1_drone.py  test_v1_rover.py  test_v1_vehicles.py  test_v2_drone.py  test_v2_rover.py  test_v2_safety.py  test_v2_state_machine.py  test_v2_vehicle_task_cancel.py  test_v2_velocity.py
tests/unit/: __init__.py  test_coordinate.py  test_disconnect.py  test_main_runner_discovery.py  test_runner.py  test_util.py  test_v1_exceptions.py  test_v1_external.py  test_v1_helpers.py  test_v1_runner.py  test_v1_safety.py  test_v1_util.py  test_v1_vehicle.py  test_v2_coordinate.py  test_v2_exceptions.py  test_v2_geofence.py  test_v2_navigation.py  test_v2_plan.py  test_v2_runner.py  test_v2_task.py  test_v2_testing.py  test_v2_types.py  test_v2_validation.py  test_v2_vector_ned.py  test_v2_vehicle.py  test_vector_ned.py
