[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerpawlib"
version = "1.3.2"
description = "Tools and frameworks for writing AERPAW scripts"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "John Kesler", email = "jckesle2@ncsu.edu"},
    {name = "Julian Reder", email = "jjreder@ncsu.edu"},
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["aerpaw", "drone", "uav", "mavsdk", "vehicle", "control"]

dependencies = [
    # Core dependencies (used by all versions)
    "pyzmq>=25.0.0",
    "pykml>=0.2.0",
    "shapely>=2.0.0",
    # V2 dependencies (MAVSDK-based, default)
    "mavsdk>=2.0.0",
    "aiohttp>=3.12.14",
    "dronekit>=2.9.2",
    "pymavlink>=2.4.0",
    "pyserial>=3.5",
    "requests>=2.32.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "psutil>=5.9.0",
    "pdoc>=15.0.0",
    "aerpawlib[sitl]",
]
docs = [
    "pdoc>=15.0.0",
]
sitl = [
    "msgspec>=0.18.0",
    "empy<4.0.0",
    "pexpect>=4.8.0",
    "MAVProxy>=1.8.0",
    "dronecan>=1.0.0",
    "future>=1.0.0",
]
all = [
    "aerpawlib[dev]",
]

[project.urls]
Homepage = "https://github.com/aerpaw/aerpawlib"
Repository = "https://github.com/aerpaw/aerpawlib"
Documentation = "https://github.com/aerpaw/aerpawlib#readme"
"Bug Tracker" = "https://github.com/aerpaw/aerpawlib/issues"

[project.scripts]
aerpawlib = "aerpawlib.__main__:main"
aerpawlib-setup-sitl = "scripts.setup_sitl:main"
aerpawlib-run-example = "scripts.run_example:main"
aerpawlib-generate-pdoc = "scripts.generate_pdoc:main"

[tool.setuptools.packages.find]
include = ["aerpawlib*", "scripts*"]

[tool.setuptools.package-data]
aerpawlib = ["*.yaml", "*.kml", "*.plan"]

[tool.coverage.run]
source = ["aerpawlib"]
omit = ["*/test/*", "*/__pycache__/*"]

[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
    "COM", # enforce trailing comma rules
    "DTZ", # require strict timezone manipulation with datetime
    "FBT", # detect boolean traps
    "N",   # enforce naming conventions, e.g. ClassName vs function_name
]