[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerpawlib"
version = "1.4.2"
description = "Tools and frameworks for writing AERPAW scripts"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "John Kesler", email = "jckesle2@ncsu.edu"},
    {name = "Julian Reder", email = "jjreder@ncsu.edu"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["aerpaw", "drone", "uav", "mavsdk", "vehicle", "control"]

dependencies = [
    # Core dependencies (used by all versions)
    "pyzmq>=25.0.0",
    "pykml>=0.2.0",
    "shapely>=2.0.0",
    "requests>=2.32.4",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",

    # Development and Documentation dependencies
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "psutil>=5.9.0",
    "pdoc>=15.0.0",

    # SITL simulation dependencies
    "msgspec>=0.18.0",
    "empy<4.0.0",
    "pexpect>=4.8.0",
    "MAVProxy>=1.8.0",
    "dronecan>=1.0.0",
    "future>=1.0.0",

    # V1/V2 vehicle driver dependencies
    "dronekit>=2.9.2",
    "pymavlink>=2.4.0",
    "pyserial>=3.5",
    "mavsdk>=2.0.0",
    "aiohttp>=3.12.14",
]


[project.urls]
Homepage = "https://github.com/aerpaw/aerpawlib"
Repository = "https://github.com/aerpaw/aerpawlib"
Documentation = "https://github.com/aerpaw/aerpawlib#readme"
"Bug Tracker" = "https://github.com/aerpaw/aerpawlib/issues"

[project.scripts]
aerpawlib = "aerpawlib.__main__:main"
aerpawlib-setup-sitl = "scripts.setup_sitl:main"
aerpawlib-run-example = "scripts.run_example:main"
aerpawlib-generate-pdoc = "scripts.generate_pdoc:main"
aerpawlib-run-proxy = "scripts.run_proxy:main"
aerpawlib-safety-checker = "aerpawlib.v1.safety.server:main_cli"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["aerpawlib*", "scripts*"]

[tool.setuptools.package-data]
aerpawlib = ["*.yaml", "*.kml", "*.plan"]

[tool.coverage.run]
source = ["aerpawlib"]
omit = ["*/test/*", "*/__pycache__/*"]

[tool.ruff]
# Exclude a variety of common directories.
exclude = [
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Set a very large line length to prevent line-wrapping by the formatter.
line-length = 320

# Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Select rules to enforce.
# We include standard rules (E, F, W) as well as isort (I) and bugbear (B)
# which are standard, high-signal linters for modern Python code.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (syntax, undefined names, etc.)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs and design issues)
    "UP",  # pyupgrade (modern Python syntax upgrades)
    "RUF", # Ruff-specific rules
]

# List of rules to ignore globally.
ignore = [
    "E501", # Line too long (no line length limit)
    "W191", # Indentation contains tabs
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore module-level import not at top of file (E402) in test files.
"**/test_*.py" = ["E402"]
# Ignore unused imports (F401) in init files.
"__init__.py" = ["F401"]
# Ignore function call in argument default (B008) in CLI callback parameters
"aerpawlib/__main__.py" = ["B008"]

[tool.ruff.format]
# Configure the formatter to match Black's settings, but with 120 line length.
quote-style = "double"
indent-style = "space"
line-ending = "lf"
